--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: Welcome to Rustam's Blog
 subtitle:
 description:
 author: John Doe
