--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: Welcome to Rustam's Blog
 subtitle:
 description:
-author: John Doe
+author: Rustam Rakhimov Igorevich
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: en
 date_format: '%Y-%m-%d'
