--- a/_config.yml
+++ b/_config.yml
@@ -380,7 +380,7 @@ han: false
 # Disqus
 disqus:
   enable: true
-  shortname: rusyasoft
+  shortname: rusyasoft-github-io
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
